[gd_scene load_steps=4 format=2]

[ext_resource path="res://interactives/InteractionZone.gd" type="Script" id=1]
[ext_resource path="res://assets/prototype/450px-Orange_question_mark.svg.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 46.6905

[node name="InteractionZone" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="QuestionMark" type="Sprite" parent="."]
scale = Vector2( 0.115556, 0.115556 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_InteractionZone_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_InteractionZone_area_exited"]
